Bug fix: preventing the "Fixed Action Buttons" to be clickable while invisible

--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -119,11 +119,13 @@ button.btn-floating {
 
     li {
       margin-bottom: 15px;
+
+      a.btn-floating {
+        display: none;
+      }
+
     }
 
-    a.btn-floating {
-      opacity: 0;
-    }
   }
 }
 
